# smp-server-fixtures

./: .gitignore  CMakeLists.txt  Kconfig  README.md  flake.nix  patches.yml  pylock.toml  west.yml
.github/scripts/: .gitignore  collect_fixtures.py  pyproject.toml  test_collect_fixtures.py  test_validate_release.py  validate_release.py
.github/workflows/: build.yaml  nix.yaml
apps/smp-server/: CMakeLists.txt  README.md  bigrx.conf  grp_enum.conf  grp_fs.conf  grp_img.conf  grp_os.conf  grp_settings.conf  grp_shell.conf  grp_stat.conf  grp_zbasic.conf  line512.conf  mps2_an385_codepart.overlay  mps2_an385_ramload_app.overlay  noparams.conf  nsos.conf  prj.conf  ramload.conf  raw_serial.conf  sample.yaml  serial.conf  shell.conf  udp.conf  udp6.conf
apps/smp-server/boards/: mps2_an385.conf  mps2_an385.overlay  native_sim.conf  qemu_cortex_m0.overlay
apps/smp-server/sysbuild/: mcuboot_recovery.conf  mcuboot_recovery.overlay
dts/: .gitkeep
patches/: boot-boot-serial-add-COBS-framing-for-raw-serial-recovery.patch
zephyr/: module.yml
